# kornerstone

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  hellow_world.py  iris_hera_train.py  iris_mlflow_feast_train.py  kornerstone-deploy.yaml  kustomization.yaml  project-structure  pyproject.toml  spark_example.py
configs/feature_store/: feature_store.yaml
configs/mlflow/: mlflow.yaml
deploy/base/argo/: argo-server-service.yaml  argo-server.yaml  kustomization.yaml  priority-class.yaml  rbac.yaml  workflow-controller-configmap.yaml  workflow-controller.yaml
deploy/base/feast/: configmap.yaml  deployment.yaml  service.yaml
deploy/base/kserve/: inference-service.yaml  kustomization.yaml  service-account.yaml
deploy/base/minio/: deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
deploy/base/mlflow/: Dockerfile  configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/base/postgres/: deployment.yaml  init-script-configmap.yaml  kustomization.yaml  pvc.yaml  service.yaml
deploy/base/storage/: kustomization.yaml  local-pv.yaml
deploy/base/tests/: connectivity-test.yaml  (+2 more)
docker/serving/: Dockerfile
docker/training/: Dockerfile
examples/iris/: kserve_inferenceservice.yaml  train_iris.py  workflow_iris.py
examples/workflows/: training-workflow.yaml
helm/kornerstone/: Chart.yaml  README.md  values.yaml
ml/training/: Dockerfile  requirements.txt  train.py
src/: setup.py
src/kornerstone/: __init__.py
tests/integration/: test_workflow.py
tests/unit/: test_training.py
workflows/: training-workflow.yaml
(+26 files in other folders)
