[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kornerstone"
version = "0.1.0"
description = "Kubernetes-native ML platform"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.5.0",
    "scikit-learn>=1.0.2",
    "feast>=0.30.0",
    "pandas>=1.4.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true 